eks/app/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  namespace: crypto
  name: crypto-service
spec:
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
  type: NodePort
  selector:
    app: crypto-deployment
